Remove deprecated URL constructor call